Toolbox reorganized to reflect the modification in the parameters of DrawingConfigurations. Divided the targets of the toolbox into default targets and user selections. Explorer reorganized and improved. The user selection is now a halo around residues and interactions. It is drawn before anything else to be in the background. The user can choose its size and color.

--- a/src/io/github/fjossinet/rnartist/gui/css/explorer.css
+++ b/src/io/github/fjossinet/rnartist/gui/css/explorer.css
@@ -3,13 +3,7 @@
     -fx-background-insets: 0, 0 0 1 0;
 }
 
-.tree-table-row-cell:odd {
-    -fx-background-color: -fx-table-cell-border-color, #c2c5c6;
-    -fx-background-insets: 0, 0 0 1 0;
-}
-
-.tree-table-row-cell:selected,
-.tree-table-row-cell:selected:odd {
+.tree-table-row-cell:selected {
     -fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-focus-color;
     -fx-background-insets: 0, 1, 2;
 }
