Trick to improve the quality of the fonts for GUI controls. 2D and 3D toolbars merged into a left toolbar. Design improved with the FlatBee css file. Fit2D works on a selection now.

--- a/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
+++ b/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
@@ -19,7 +19,7 @@
 	The "color" is your main color (in this case greenish)
 	*/
 * {
-    -color : #2e9fcc;
+    -color : #78b5b5;
     -white : #efefef;
     -gray : #dfdfdf;
     -darkGray : derive(-gray,-20%);
@@ -451,4 +451,9 @@
 
 .no-highlight .menu-item:focused {
     -fx-background-color: transparent;
+}
+
+.thick-separator .line {
+    -fx-border-color: black ;
+    -fx-border-width: 2 0 0 0 ;
 }
