--- a/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
+++ b/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
@@ -1,459 +1,112 @@
-/*
-*		FLATBEE by KarlTheBee´
-* An javafx css style for a smooth & flat user interface
-* Website : github.com/karlthebee/flatbee
-* Mail    : karlthebee@gmail.com
-*
-*	Version 1.0.0
-*
-* The license is pretty much a CC-BY-NC 4.0 license (https://creativecommons.org/licenses/by-nc/4.0/).
-* In simple (non legal) english :
-* you can modify and distribute it, ship in in your application,
-* but not use/sell it commercially.
-* And you have to give credits,
-* like "FlatBee theme by karlthebee (https://github.com/karlthebee/flatbee)"
-*/
-
-/*
-	* These are values you can edit safely.
-	The "color" is your main color (in this case greenish)
-	*/
-* {
-    -color : #78b5b5;
-    -white : #efefef;
-    -gray : #dfdfdf;
-    -darkGray : derive(-gray,-20%);
-    -black : #444444dd;
-    -abort : #e74c3c;
-}
-
-.root{
-    -fx-background-color : -white;
-    -fx-fill-width : true;
-    -fx-color : -color;
-    -fx-fill-height : true;
-    -fx-font-family: 'Segoe UI';
-    /* remove the ugly focus shade */
-    -fx-focus-color : transparent;
-    -fx-faint-focus-color: transparent;
-}
-
-#flatbee-tiny{
-    -fx-font-size : 8.0;
-}
-
-#flatbee-small{
-    -fx-font-size : 10.0;
-}
-
-#flatbee-medium{
-    -fx-font-size : 12.0;
-}
-
-#flatbee-large{
-    -fx-font-size : 18.0;
-}
-
-#flatbee-xlarge{
-    -fx-font-size : 24.0;
-}
-
-#flatbee-xxlarge{
-    -fx-font-size : 32.0;
-    -fx-font-weight: bold;
-}
-
-#flatbee-xxxlarge{
-    -fx-font-size : 40.0;
-    -fx-font-weight: bold;
-}
-
-#flatbee-jumbo{
-    -fx-font-size : 48.0;
-    -fx-font-weight: bold;
-}
-
-#flatbee-card{
-    -fx-spacing : 12.0;
-    -fx-padding : 10;
-    -fx-hgap : 10;
-    -fx-vgap : 10;
-    -fx-background-color : -white;
-    -fx-effect : dropshadow(two-pass-box,-black,10,0,0,0);
-}
-
-#flatbee-container{
-    -fx-spacing : 12.0;
-    -fx-padding : 10;
-    -fx-hgap : 10;
-    -fx-vgap : 10;
-}
-
-#flatbee-panel{
-    -fx-padding : 10;
-}
-
-/*
- * **********
- * LABELS
- * **********
-*/
-.label{
-    -fx-text-fill : -black;
-}
-
-/*
- * **********
- * BUTTONS
- * **********
- *
- */
-.button {
-    -fx-background-color : -gray,-gray,-gray,-gray;
-}
-.button:default{
-    -fx-background-color : -color;
-}
-.button:cancel{
-    -fx-background-color : -abort;
-}
-
-.button:focused {
-    -fx-color : -darkGray;
-    -fx-background-color : -darkGray;
-    -fx-focus-color : -darkGray;
-}
-.button:hover {
-    -fx-color: -darkGray;
-    -fx-inner-border : -darkGray;
-    -fx-body-color : -darkGray;
-}
-
-.button:armed {
-    -fx-color: -white;
-}
-
-
-.toggle-button{
-    -fx-background-color : -gray;
-}
-
-.toggle-button:selected{
-    -fx-background-color : -darkGray;
-}
-
-.menu-button{
-    -fx-background-color : -gray;
-}
-
-.split-menu-button{
-    -fx-background-color : -gray;
-}
-
-.split-menu-button>*.label{
-    -fx-background-color : -gray;
-}
-
-.split-menu-button>*.arrow-button{
-    -fx-background-color : -gray;
-}
-
-
-/*
- * **********
- * PROGRESSBAR
- * **********
- *
- */
-.progress-indicator {
-    -fx-indeterminate-segment-count : 12;
-    -fx-progress-color : -color;
-    -fx-spin-enabled : true;
-}
-
-.progress-bar>*.bar{
-    -fx-background-color : -color;
-}
-
-.progress-bar>*.track{
-    -fx-background-color : -gray;
+.separator *.line {
+    -fx-border-style: solid;
+    -fx-border-width: 1px;
 }
 
-.progress-bar:determinate>*.determinate-indicator>*.track{
-    -fx-background-color : -gray;
+.spinner {
+    -fx-base: #565656;
 }
 
-.progress-bar:determinate>*.determinate-indicator>*.indicator{
-    -fx-background-color : -gray;
+.increment-arrow {
+    -fx-background-color: white;
 }
 
-/*
-* **********
-* DATE PICKER
-* **********
-*
-*/
-.date-picker{
-    -fx-background-color : -white,-gray,gray;
+.decrement-arrow {
+    -fx-background-color: white;
 }
 
-.date-picker>*.arrow-button{
-    -fx-background-color : -white,-gray,-gray;
+.text-field {
+    -fx-background-color: #565656 ;
 }
 
-.date-picker>*.arrow-button>*.arrow{
-    -fx-background-color : -darkGray, -black;
+.text-field {
+    -fx-background-color: #565656 ;
+    -fx-text-inner-color: white;
 }
-/*
- * **********
- * SLIDER
- * **********
- *
- */
-.slider>*.track{
-    -fx-background-color : -gray;
-}
-.slider>*.axis:bottom{
-    -fx-tick-label-font-family : 'Segoe UI';
-}
-
-.slider>*.thumb{
-    -fx-background-color : -color;
-}
-
-/*
- * **********
- * COMBOBOX
- * **********
- *
- */
-.combo-box {
-    -fx-background-color : -gray;
-}
-
-.check-box>*.box{
-    -fx-background-color : -color;
-}
-
-
-/*
- * **********
- * TABPANE
- * **********
- *
- */
-.tab-pane>*.tab-header-area{
-    -fx-padding : 0,0,0,0;
-}
-.tab-pane>*.tab-header-area>*.headers-region>*.tab:selected:top{
-    -fx-padding : 6,6,6,6;
-    -fx-text-fill : -white;
-    -fx-background-color : -color;
-}
-.tab-pane>*.tab-header-area>*.headers-region>*.tab:selected>*.tab-container>*.tab-label{
-    -fx-font-size : 13.0;
-    -fx-font-weight: bold;
-}
-
-.tab-pane>*.tab-header-area>*.headers-region>*.tab:top{
-    -fx-padding : 4,4,4,4;
-    -fx-text-fill : -white;
-    -fx-background-color : -white;
-}
-
-.tab-pane>*.tab-header-area>*.control-buttons-tab>*.container>*.tab-down-button{
-    -fx-background-color : -white;
-}
-
-.tab-pane>*.tab-header-area>*.control-buttons-tab>*.container>*.tab-down-button>*.arrow{
-    -fx-background-color : -darkGray;
-}
-
-
-/*
- * **********
- * MENU
- * **********
- *
- */
-.menu-bar{
-    -fx-background-color : -gray;
-}
-
-
-/*
- * **********
- * Checkbox
- * **********
- *
- */
-.check-box>*.box{
-    -fx-background-color : -gray;
-}
-
-.check-box:selected>*.box>*.mark{
-    -fx-background-color : -black;
-}
-.check-box:indeterminate>*.box>*.mark{
-    -fx-background-color : -black;
-}
 
-
-/*
-* **********
-* RADIO BUTTONS
-* **********
-*
-*/
-.radio-button>*.radio{
-    -fx-background-color : -gray;
-}
-
-.radio-button:selected>*.radio>*.dot{
-    -fx-background-color : -black;
-}
-
-/*
- * **********
- * Text fields / inputs
- * **********
- *
- */
-.text-field{
-    -fx-highlight-fill : -color;
-    -fx-highlight-text-fill : -white;
-}
-
-.text-area{
-    -fx-highlight-fill : -color;
-    -fx-highlight-text-fill : -white;
-}
-
-.spinner>*.increment-arrow-button{
-    -fx-background-color : -gray;
-}
-
-.spinner>*.decrement-arrow-button{
-    -fx-background-color : -gray;
-}
-/*
- * **********
- * Titled Pane
- * **********
- *
- */
-
-.first-titled-pane:expanded>*.title{
-    -fx-background-color : -color;
-}
-
-.titled-pane:expanded>*.title{
-    -fx-background-color : -color;
-}
-
-.titled-pane:collapsed>*.title{
-    -fx-background-color : -gray;
-}
-
-.titled-pane*>*.title>*.arrow-button>*.arrow{
-    -fx-background-color : -black;
-}
-
-/*
- * **********
- * Table
- * **********
- *
- */
-
-.table-view:row-selection>*.column-header-background{
-    -fx-background-color : -white;
-}
-
-.table-view>*.column-resize-line{
-    -fx-background-color : -black;
-}
-
-.table-view>*.column-header-background>*.nested-column-header>*.table-column{
-    -fx-background-color : -darkGray, -white;
-}
-
-.table-view>*.column-header-background>*.filler{
-    -fx-background-color : -darkGray, -gray;
+.label {
+    -fx-text-fill: white;
 }
 
-.table-view>*.column-header-background>*.show-hide-columns-button{
-    -fx-background-color : -gray;
+.menu-item .label{
+    -fx-text-fill: white;
 }
 
-.tree-table-view:row-selection>*.column-header-background{
-    -fx-background-color : -white;
+.menu .label{
+    -fx-text-fill: white;
 }
 
-.tree-table-view>*.column-resize-line{
-    -fx-background-color : -black;
+.menu, .menu-item, .context-menu {
+    -fx-background-color: #565656 ;
 }
 
-.tree-table-view>*.column-header-background>*.nested-column-header>*.table-column {
-    -fx-background-color : -darkGray, -white;
+.menu, .menu-item, .context-menu, .combo-box, .list-cell {
+    -fx-background-color: #565656 ;
+    -fx-text-fill: white;
 }
 
-.tree-table-view>*.column-header-background>*.filler{
-    -fx-background-color : -darkGray, -gray;
+.menu-item:hover, .list-cell:hover  {
+    -fx-background-color: #333333 ;
 }
 
-.tree-table-view>*.column-header-background>*.show-hide-columns-button{
-    -fx-background-color : -gray;
+.split-pane-divider {
+    -fx-padding: 0 0.5 0 0.5;
+    -fx-background-color: white;
+    -fx-background-insets: 0;
 }
-
 
-/*
- * **********
- * Color picker
- * **********
- *
- */
-.color-picker{
-    -fx-background-color : -gray;
+.tab-pane .tab {
+    -fx-padding: 0.0 5.0 0.0 5.0;
+    -fx-background-color: #d3d3d3;
 }
 
-/*
- * **********
- * Scroll pane
- * **********
- *
- */
-.scroll-pane>*.scroll-bar{
-    -fx-background-color : -gray;
+.tab .tab-label {
+    -fx-text-fill: #565656;
 }
 
-.scroll-pane>*.scroll-bar>*.thumb{
-    -fx-background-color : -color;
+.tab-pane .tab:selected {
+    -fx-padding: 3.0 5.0 3.0 5.0;
+    -fx-background-color: #333333;
 }
 
-#layout-label {
-    -fx-background-color: white, white;
-    -fx-background-radius: 16.4, 15;
-    -fx-border-radius: 15;
-    -fx-border-width: 2;
-    -fx-border-color: dimgrey;
-    -fx-padding: 5;
+.tab:selected .tab-label {
+    -fx-text-fill: white;
 }
 
-.slider .axis {
-    -fx-tick-label-fill: black;
+.tab-pane .tab-header-area .tab-header-background {
+    -fx-background-color: #565656;
 }
 
-.slider .axis .axis-tick-mark, .slider .axis .axis-minor-tick-mark {
-    -fx-fill: null;
-    -fx-stroke: black;
+.tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
+    -fx-border-color: transparent;
 }
 
-.no-highlight .menu-item:focused {
+.table-view {
     -fx-background-color: transparent;
 }
 
-.thick-separator .line {
-    -fx-border-color: black ;
-    -fx-border-width: 2 0 0 0 ;
+.table-view .corner {
+    -fx-background-color: transparent;
 }
+
+.table-view .column-header-background .filler {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header {
+    -fx-background-color: transparent;
+}
+
+.table-view .column-header-background {
+    -fx-background-color: #333333;
+}
+
+.table-view .column-header .label {
+    -fx-text-fill: white;
+}
+
+.table-view .column-header {
+    -fx-border-color: white;
+    -fx-border-width: 0.5 0.5 0 0.5;
+}
+
