Many modifications to orient RNArtist into the management of thousands of RNA 2Ds. With this commit, RNArtist is not fully functional. More to come.

--- a/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
+++ b/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
@@ -1,5 +1,10 @@
 .separator *.line {
     -fx-border-style: solid;
+    -fx-border-width: 2px;
+}
+
+.separator *.line #sub {
+    -fx-border-style: solid;
     -fx-border-width: 1px;
 }
 
