Many UI improvements. Undo/Redo feature. SHow/Hide lateral panels.

--- a/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
+++ b/src/main/resources/io/github/fjossinet/rnartist/gui/css/main.css
@@ -138,4 +138,23 @@
     -fx-background-radius: 5em;
 }
 
+.combo-box-base {
+    -fx-background-color: #333333;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-padding: 0.333333em 0.666667em 0.333333em 0.666667em; /* 4 8 4 8 */
+    -fx-text-fill: #ffffff;
+    -fx-alignment: CENTER;
+    -fx-content-display: LEFT;
+}
+
+.combo-box-popup .list-cell {
+    -fx-background-color: #333333;
+    -fx-text-fill: #ffffff;
+}
+
+.combo-box-popup .list-view {
+    -fx-background-color: #333333;
+}
+
 
